[project]
name = "fake-data"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Chad Upjohn", email = "chad.upjohn@pinnsg.com" }
]
dependencies = [
    "langchain~=0.2.12",
    "langchain-experimental~=0.0.64",
    "langsmith~=0.1.98",
    "beautifulsoup4~=4.12.3",
    "langchain-community~=0.2.11",
    "click~=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
# `rye run fake-data`
"fake-data" = "fake_data:main"
"database" = "database:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
fmt = "rye fmt"
lint = "rye lint --fix"
all = { chain = ["fmt", "lint"] }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fake_data"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
	"A",    # warn about shadowing built-ins
	"E",    # style stuff, whitespaces
	"N",    # naming
      "I",    # sort imports
	"T100", # breakpoints (probably don't want these in prod!)
]
